<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@id/id_iv_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/iv_text_photo"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/id_iv_photo"
        android:layout_toLeftOf="@+id/id_btn_download"
        android:layout_toRightOf="@id/id_iv_photo"
        android:layout_toStartOf="@+id/id_btn_download"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/tv_text_publisher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="2dp"
                android:text="@string/tv_text_title" />

            <TextView
                android:id="@+id/id_tv_upload_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/tv_text_upload_date" />

            <TextView
                android:id="@+id/id_tv_upload_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="2dp"
                android:text="@string/tv_text_download_count" />

        </LinearLayout>


        <TextView
            android:id="@+id/id_tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/tv_text_summary" />

    </LinearLayout>

    <Button
        android:id="@+id/id_btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/btn_text_download" />

</RelativeLayout>