<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_fl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/id_iv_photo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/id_iv_photo"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_name"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_name"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_user_password"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_input_user_pass_word"
                        android:inputType="textPassword"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_confirm_password"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_confirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_confirm_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_phone"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_phone"
                        android:inputType="phone"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_email"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_qq"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_qq"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_qq"
                        android:inputType="number"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tv_text_weChat"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/id_et_weChat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/et_hint_weChat"
                        android:inputType="number"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <Button
                        android:id="@+id/id_btn_register"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_text_register"
                        android:textSize="@dimen/abc_text_size_medium_material" />

                    <Button
                        android:id="@+id/id_btn_cancel"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_text_cancel"
                        android:textSize="@dimen/abc_text_size_medium_material" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>