<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/id_iv_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerVertical="true"
        android:background="@drawable/frame_gallery_thumb"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/id_iv_photo"
        android:layout_toRightOf="@+id/id_iv_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_tv_gallery_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_gallery_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_gallery_photo_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/tv_text_gallery_photo_count_format"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>