<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/id_ll_topic_parent_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv_communication_topic_parent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tv_text_communication_topic_parent_title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_et_communication_topic_parent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/et_text_communication_topic_parent_title"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv_communication_topic_child_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tv_text_communication_topic_child_title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_et_communication_topic_child_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/et_hint_communication_topic_child_title"
                android:padding="10dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_tv_communication_topic_child_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tv_text_communication_topic_child_summary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_et_communication_topic_child_summary"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background"
                android:gravity="start|top"
                android:hint="@string/et_hint_communication_topic_child_summary"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:scrollHorizontally="false"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textSize="14sp" />

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_text_submit" />

            <Button
                android:id="@+id/id_btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_text_cancel" />

        </LinearLayout>-->
    </LinearLayout>

</ScrollView>

